...
    android:gravity="center_vertical|fill"
    android:orientation="vertical"
    tools:context="com.gaparmar.mediaflashback.UI.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp">

...
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Playing"
                android:textColor="#c4d7f2"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/song_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/line2" />

            <TextView
                android:id="@+id/song_title"
                android:layout_width="match_parent"
...
                android:id="@+id/previous_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginRight="25dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="@+id/pause_button"
                app:layout_constraintEnd_toStartOf="@+id/play_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/next_button"
                app:srcCompat="@android:drawable/ic_media_previous" />

            <RelativeLayout
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_weight="1">
...
                android:id="@+id/next_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="25dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="@+id/toggleBtn"
                app:layout_constraintEnd_toStartOf="@+id/toggleBtn"
                app:layout_constraintStart_toEndOf="@+id/play_button"
                app:layout_constraintTop_toTopOf="@+id/toggleBtn"
                app:srcCompat="@android:drawable/ic_media_next" />

            <ImageButton
...
        <!--android:textColor="#232625"-->
        <!--android:textSize="23dp"-->
        <!--tools:layout_editor_absoluteX="22dp"-->
        <!--tools:layout_editor_absoluteY="403dp" />-->

        <!--<Button-->
        <!--android:id="@+id/browse_button"-->
        <!--android:layout_width="316dp"-->
        <!--android:layout_height="40dp"-->
        <!--android:background="#36668e"-->
        <!--android:text="Browse Music"-->
        <!--android:textAllCaps="false"-->
        <!--android:textColor="#c4d7f2"-->
        <!--android:textSize="23dp"-->
        <!--tools:layout_editor_absoluteX="22dp"-->
        <!--tools:layout_editor_absoluteY="450dp" />-->

...
